@@ -10,19 +10,19 @@ public class ParserTest {
     @Test
     public void getString() throws Exception {
         Parser parser = new Parser(System.getProperty("user.dir") + "/src/test/java/ar/fiuba/tdd/tp/model/" + "input" + ".json");
-        assertEquals(parser.getString("name"),"mkyong.com");
+        assertEquals("String match ok",parser.getString("name"),"mkyong.com");
     }
 
     @Test
     public void getLong() throws Exception {
         Parser parser = new Parser(System.getProperty("user.dir") + "/src/test/java/ar/fiuba/tdd/tp/model/" + "input" + ".json");
-        assertEquals(parser.getLong("age"),new Long(100));
+        assertEquals("Long match ok",parser.getLong("age"),Long.valueOf(100));
     }
 
     @Test
     public void getJSONarray() throws Exception {
         Parser parser = new Parser(System.getProperty("user.dir") + "/src/test/java/ar/fiuba/tdd/tp/model/" + "input" + ".json");
-        assertEquals(parser.getJSONarray("messages").size(),3);
+        assertEquals("getJSONArray match ok",parser.getJSONarray("messages").size(),3);
     }
 
 }
